helm-charts/infra/crossplane-managed-resources/eks-clusters/aatt-demo-eks-cluster/01-networking/08-route-table-public.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: aatt-demo-route-public
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: aatt-demo-internet-gw
    region: us-east-1
    routeTableIdRef:
      name: aatt-demo-route-table-public
    tags:
      Name: aatt-demo-route-public
  providerConfigRef:
    name: aws
