helm-charts/infra/crossplane-managed-resources/eks-clusters/aatt-demo-eks-cluster/01-networking/09-route-table-private-b.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: aatt-demo-route-private-b
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: aatt-demo-nat-gw-b
    region: us-east-1
    routeTableIdRef:
      name: aatt-demo-route-table-private-b
    tags:
      Name: aatt-demo-route-private-b
  providerConfigRef:
    name: aws
