helm-charts/infra/crossplane-managed-resources/eks-clusters/aatt-demo-eks-cluster/01-networking/10-route-table-private-c.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: aatt-demo-route-private-c
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: aatt-demo-nat-gw-c
    region: us-east-1
    routeTableIdRef:
      name: aatt-demo-route-table-private-c
    tags:
      Name: aatt-demo-route-private-c
  providerConfigRef:
    name: aws
